Fixed line spacing for city header. Included h4 css.

--- a/src/style.css
+++ b/src/style.css
@@ -122,10 +122,14 @@ p, h5, ul, li {
     font-size: 36px;
 }
 
+h4 {
+    text-align: center;
+}
+
 #city-header {
     font-weight: 300px;
     font-size: 80px;
-    line-height: 28px;
+    line-height: 75px;
     text-align: center;
     margin-bottom: 20px auto;
 }
